--- a/style.css
+++ b/style.css
@@ -46,3 +46,15 @@ ul li a {
   align-items: center;
   justify-content: center;
 }
+#the-end a {
+  display: block;
+  border: 2px solid blue;
+  border-radius: 30px;
+  text-align: center;
+  justify-content: center;
+  background-color: black;
+  color: blue;
+  padding: 5px;
+  margin: 265px 400px 0;
+  text-decoration: none;
+}
